# aivika-experiment-report

./: LICENSE  aivika-experiment-report.cabal  aivikasim-experiment-report.cabal
Simulation/Aivika/Experiment/: Report.hs
Simulation/Aivika/Experiment/Report/: Base.hs  Chart.hs  Types.hs
Simulation/Aivika/Experiment/Report/Base/: ExperimentSpecsView.hs  ExperimentSpecsWriter.hs  FinalStatsView.hs  FinalTableView.hs  LastValueView.hs  TableView.hs  TimingStatsView.hs  WebReportRenderer.hs
Simulation/Aivika/Experiment/Report/Chart/: DeviationChartView.hs  FinalHistogramView.hs  FinalXYChartView.hs  HistogramView.hs  TimeSeriesView.hs  XYChartView.hs
tests/: MachRep2.hs  MachRep2Sqlite3.hs  MachRep3.hs  MachRep3MySQLUsingCairo.hs  MachRep3PostgreSQLUsingCairo.hs  MachRep3Sqlite3.hs  MachRep3Sqlite3UsingDiagrams.hs  Test.hs
