name:            aivikasim-experiment-report
version:         0.1
synopsis:        Simulation experiment reports for AivikaSim
description:
    This package allows generating reports by simulation experiments [1].
    .
    \[1] <http://www.aivikasoft.com/aivikasim/aivikasim-experiment>
    .
category:        Simulation
license:         AllRightsReserved
license-file:    LICENSE
copyright:       (c) 2017. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://www.aivikasoft.com/en/products/aivikasim.html
cabal-version:   >= 1.6
build-type:      Simple
tested-with:     GHC == 8.0.2

extra-source-files:  tests/Test.hs

library

    exposed-modules: Simulation.Aivika.Experiment.Report
                     Simulation.Aivika.Experiment.Report.Types
                     Simulation.Aivika.Experiment.Report.Base
                     Simulation.Aivika.Experiment.Report.Base.WebReportRenderer
                     
    build-depends:   base >= 4.2 && < 6,
                     mtl >= 1.1.0.2,
                     containers >= 0.4.0.0,
                     directory >= 1.1.0.2,
                     filepath >= 1.3.0.0,
                     parallel-io >= 0.3.2.1,
                     aivikasim >= 1.0,
                     aivikasim-experiment >= 0.1,
                     aivikasim-experiment-entity >= 0.1

    extensions:      MultiParamTypeClasses,
                     TypeFamilies
                     
    ghc-options:     -O2

source-repository head

    type:     git
    location: https://github.com/dsorokin/aivikasim-experiment-report
