name:            aivikasim-experiment-report
version:         0.1
synopsis:        Simulation experiment reports for AivikaSim
description:
    This package allows generating reports by simulation experiments [1].
    .
    \[1] <http://www.aivikasoft.com/aivikasim/aivikasim-experiment>
    .
category:        Simulation
license:         AllRightsReserved
license-file:    LICENSE
copyright:       (c) 2017. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://www.aivikasoft.com/en/products/aivikasim.html
cabal-version:   >= 1.6
build-type:      Simple
tested-with:     GHC == 8.0.2

extra-source-files:  tests/MachRep2Sqlite3.hs
                     tests/MachRep3MySQL.hs
                     tests/MachRep3PostgreSQL.hs
                     tests/MachRep3Sqlite3.hs

library

    exposed-modules: Simulation.Aivika.Experiment.Report
                     Simulation.Aivika.Experiment.Report.Types
                     Simulation.Aivika.Experiment.Report.Base
                     Simulation.Aivika.Experiment.Report.Base.ExperimentSpecsView
                     Simulation.Aivika.Experiment.Report.Base.ExperimentSpecsWriter
                     Simulation.Aivika.Experiment.Report.Base.FinalStatsView
                     Simulation.Aivika.Experiment.Report.Base.FinalTableView
                     Simulation.Aivika.Experiment.Report.Base.LastValueView
                     Simulation.Aivika.Experiment.Report.Base.TableView
                     Simulation.Aivika.Experiment.Report.Base.TimingStatsView
                     Simulation.Aivika.Experiment.Report.Base.WebReportRenderer
                     Simulation.Aivika.Experiment.Report.Chart
                     Simulation.Aivika.Experiment.Report.Chart.DeviationChartView
                     Simulation.Aivika.Experiment.Report.Chart.FinalHistogramView
                     Simulation.Aivika.Experiment.Report.Chart.FinalXYChartView
                     Simulation.Aivika.Experiment.Report.Chart.HistogramView
                     Simulation.Aivika.Experiment.Report.Chart.TimeSeriesView
                     Simulation.Aivika.Experiment.Report.Chart.XYChartView
                     
    build-depends:   base >= 4.2 && < 6,
                     mtl >= 1.1.0.2,
                     array >= 0.3.0.0,
                     containers >= 0.4.0.0,
                     directory >= 1.1.0.2,
                     filepath >= 1.3.0.0,
                     parallel-io >= 0.3.2.1,
                     Chart >= 1.5,
                     lens >= 3.9,
                     data-default-class >= 0.0.1,
                     aivikasim >= 1.0,
                     aivikasim-experiment >= 0.1,
                     aivikasim-experiment-chart >= 0.1,
                     aivikasim-experiment-entity >= 0.1

    extensions:      MultiParamTypeClasses,
                     FlexibleContexts,
                     TypeFamilies
                     
    ghc-options:     -O2

source-repository head

    type:     git
    location: https://github.com/dsorokin/aivikasim-experiment-report
